package main

import (
	"context"
	"fmt"
	"log"
	"math/rand"
	"net"
	"os"
	"os/signal"
	"syscall"
	"time"

	"go-ecommerce/pkg/config"
	"go-ecommerce/pkg/discovery"
	"go-ecommerce/proto/order"
	"go-ecommerce/proto/payment"

	_ "github.com/mbobakov/grpc-consul-resolver"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/grpc/reflection"
	"google.golang.org/grpc/status"
)

type server struct {
	payment.UnimplementedPaymentServiceServer
	orderClient order.OrderServiceClient
}

// Pay æ”¯ä»˜æ¥å£å®ç°
func (s *server) Pay(ctx context.Context, req *payment.PayRequest) (*payment.PayResponse, error) {
	log.Printf("ğŸ“¥ [Payment] æ”¶åˆ°æ”¯ä»˜è¯·æ±‚: OrderNo=%s, Amount=%.2f", req.OrderNo, req.Amount)

	// 1. æ¨¡æ‹Ÿä¸ç¬¬ä¸‰æ–¹æ”¯ä»˜ç½‘å…³ï¼ˆæ”¯ä»˜å®/å¾®ä¿¡ï¼‰çš„äº¤äº’å»¶è¿Ÿ (0.5s - 1.5s)
	time.Sleep(time.Duration(500+rand.Intn(1000)) * time.Millisecond)

	// 2. æ¨¡æ‹Ÿæ”¯ä»˜æˆåŠŸ (ç”Ÿæˆä¸€ä¸ªéšæœºæµæ°´å·)
	transactionId := fmt.Sprintf("ALIPAY_%d_%s", time.Now().UnixNano(), req.OrderNo)
	log.Printf("âœ… [Payment] ç¬¬ä¸‰æ–¹æ”¯ä»˜æ‰£æ¬¾æˆåŠŸï¼Œæµæ°´å·: %s", transactionId)

	// 3. å…³é”®æ­¥éª¤ï¼šè°ƒç”¨ Order Service ä¿®æ”¹è®¢å•çŠ¶æ€
	log.Printf("ğŸ”„ [Payment] æ­£åœ¨å›è°ƒè®¢å•æœåŠ¡æ›´æ–°çŠ¶æ€...")
	_, err := s.orderClient.MarkOrderPaid(ctx, &order.MarkOrderPaidRequest{
		OrderNo: req.OrderNo,
	})

	if err != nil {
		log.Printf("âŒ [Payment] å›è°ƒè®¢å•æœåŠ¡å¤±è´¥: %v", err)
		// æ³¨æ„ï¼šåœ¨çœŸå®ç”Ÿäº§ç¯å¢ƒä¸­ï¼Œè¿™é‡Œä¸èƒ½ç›´æ¥è¿”å›é”™è¯¯ï¼Œå¦åˆ™ç”¨æˆ·æ‰£äº†é’±ä½†è®¢å•æ˜¾ç¤ºæ²¡æ”¯ä»˜ã€‚
		// åº”è¯¥å†™å…¥æœ¬åœ°æ¶ˆæ¯è¡¨æˆ–å‘ MQ æ¶ˆæ¯ï¼Œè¿›è¡Œæœ€ç»ˆä¸€è‡´æ€§é‡è¯•ã€‚
		// è¿™é‡Œä¸ºäº†æ¼”ç¤ºç®€å•ï¼Œå…ˆè¿”å›é”™è¯¯ã€‚
		return nil, status.Error(codes.Internal, "æ”¯ä»˜æˆåŠŸä½†åŒæ­¥è®¢å•çŠ¶æ€å¤±è´¥")
	}

	log.Printf("ğŸ‰ [Payment] è®¢å• %s æµç¨‹å…¨éƒ¨å®Œæˆ (çŠ¶æ€å·²æ›´æ–°ä¸ºå·²æ”¯ä»˜)", req.OrderNo)

	return &payment.PayResponse{
		TransactionId: transactionId,
	}, nil
}

func main() {
	// 1. åŠ è½½é…ç½®
	c, err := config.LoadConfig(".")
	if err != nil {
		log.Fatalf("Failed to load config: %v", err)
	}

	// ç¯å¢ƒå˜é‡é€‚é…
	if v := os.Getenv("CONSUL_ADDRESS"); v != "" {
		c.Consul.Address = v
	}
	if v := os.Getenv("SERVICE_PORT"); v != "" {
		// è¿™é‡Œç®€å•å¤„ç†ï¼Œå®é™…åº”è½¬æ¢ç±»å‹èµ‹å€¼ï¼Œæˆ–è€…ç›´æ¥ä¿¡èµ– config é‡Œçš„é»˜è®¤å€¼
		// c.Service.Port = ...
	}

	// 2. åˆå§‹åŒ– gRPC è¿æ¥ (è¿æ¥ Order Service)
	// ä½¿ç”¨ consul è§£æå™¨åŠ¨æ€å‘ç° order-service
	orderConn, err := grpc.Dial(
		fmt.Sprintf("consul://%s/%s?wait=14s", c.Consul.Address, "order-service"),
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithDefaultServiceConfig(`{"loadBalancingPolicy": "round_robin"}`),
	)
	if err != nil {
		log.Fatalf("Failed to connect to order service: %v", err)
	}
	defer orderConn.Close()

	orderClient := order.NewOrderServiceClient(orderConn)
	log.Println("ğŸ”— å·²è¿æ¥åˆ° Order Service")

	// 3. å¯åŠ¨ Payment æœåŠ¡
	addr := fmt.Sprintf(":%d", c.Service.Port)
	lis, err := net.Listen("tcp", addr)
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	// æ³¨å†Œåˆ° Consul
	err = discovery.RegisterService(c.Service.Name, c.Service.Port, c.Consul.Address)
	if err != nil {
		log.Fatalf("Failed to register service: %v", err)
	}

	s := grpc.NewServer()
	payment.RegisterPaymentServiceServer(s, &server{
		orderClient: orderClient,
	})
	reflection.Register(s)

	log.Printf("ğŸš€ Payment Service listening on %s", addr)

	// ä¼˜é›…é€€å‡ºå¤„ç†
	go func() {
		if err := s.Serve(lis); err != nil {
			log.Fatalf("failed to serve: %v", err)
		}
	}()

	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit
	log.Println("Shutting down Payment Service...")
	s.GracefulStop()
}
